# migrate-cloud-supabase

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
cloudsql_to_supabase/: clean.py  cli.py  config.py  export.py  import_.py  utils.py
