[project]
name = "cloudsql-to-supabase"
version = "0.1.0"
description = "Migrate PostgreSQL databases from Cloud SQL to Supabase easily"
authors = [
    { name = "Gibson Kemboi", email = "gibsonsgibson88@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "python-dotenv"
]

[tool.setuptools]
packages = ["cloudsql_to_supabase"]


[project.scripts]
cloudsql-to-supabase = "cloudsql_to_supabase.cli:cli"